# ROPTLIB

./: .gitignore  CMakeLists.txt  README.md
Solvers/: RTRNewton.h  SolversTR.cpp  SolversTR.h
cwrapper/blas/: f2c.h
